# nowdev

./: Cargo.toml  LICENSE  README.md
linode/: transformed-schema.json
linode-api/: Cargo.toml  README.md
linode-api/.openapi-generator/: FILES
linode-api/docs/: Account.md  AccountActivePromotionsInner.md  AccountCreditCard.md  AccountSettings.md  AddLinodeConfigRequest.md  AddLinodeDiskRequest.md  AddLinodeDiskRequestAllOf.md  AddLinodeIpRequest.md  AuthorizedApp.md  Backup.md  BootLinodeInstanceRequest.md  CloneLinodeInstanceRequest.md  CreateLinodeInstanceRequest.md  CreateLinodeInstanceRequestAllOf.md  CreateLinodeInstanceRequestAllOf1.md  CreateLinodeInstanceRequestAllOf1InterfacesInner.md  CreateSnapshotRequest.md  CreditCard.md  CreditCardData.md  Database.md  DatabaseBackup.md  DatabaseBackupSnapshot.md  DatabaseCredentials.md  DatabaseEngine.md  DatabaseHosts.md  DatabaseMongoDb.md  DatabaseMongoDbHosts.md  DatabaseMongoDbRequest.md  DatabaseMySql.md  DatabaseMySqlRequest.md  DatabasePostgreSql.md  DatabasePostgreSqlHosts.md  DatabasePostgreSqlRequest.md  DatabaseSsl.md  DatabaseType.md  DatabaseTypeEngine.md  DatabaseTypeEngines.md  DatabaseTypeEnginesMysqlInner.md  DatabaseTypeEnginesMysqlInnerPrice.md  DatabaseUpdates.md  (+197 more)
linode-api/src/apis/: configuration.rs  linode_instances_api.rs  linode_types_api.rs  mod.rs  volumes_api.rs
linode-api/src/models/: account.rs  account_active_promotions_inner.rs  account_credit_card.rs  account_settings.rs  authorized_app.rs  (+237 more)
linode/schema-transformer/: index.mjs  package-lock.json  package.json
src/: main.rs
