[workspace]
members = ["linode-api"]

[package]
name = "nowdev"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.69"
chrono = "0.4.24"
clap = { version = "4.1.6", features = ["derive"] }
dirs = "4.0.0"
indoc = "2.0.0"
linode-api = { path = "./linode-api" }
tokio = { version = "1.25.0", features = ["full"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html